# api/server/swagger_server/models/api_dataset.py
@@ -18,19 +18,19 @@ from datetime import date, datetime  # noqa: F401
 
 from typing import List, Dict  # noqa: F401
 
-from swagger_server.models.base_model_ import Model
+from swagger_server.models.api_asset import ApiAsset
 from swagger_server.models.api_metadata import ApiMetadata  # noqa: F401,E501
 from swagger_server.models.api_parameter import ApiParameter  # noqa: F401,E501
 from swagger_server import util
 
 
-class ApiDataset(Model):
+class ApiDataset(ApiAsset):
     """NOTE: This class is auto generated by the swagger code generator program.
 
     Do not edit the class manually.
     """
 
-    def __init__(self, id: str=None, created_at: datetime=None, name: str=None, description: str=None, featured: bool=None, publish_approved: bool=None, related_assets: List[str]=None, domain: str=None, format: str=None, size: str=None, number_of_records: int=None, license: str=None, metadata: ApiMetadata=None):  # noqa: E501
+    def __init__(self, id: str=None, created_at: datetime=None, name: str=None, description: str=None, featured: bool=None, publish_approved: bool=None, related_assets: List[str]=None, filter_categories: Dict[str, str]=None, domain: str=None, format: str=None, size: str=None, number_of_records: int=None, license: str=None, metadata: ApiMetadata=None):  # noqa: E501
         """ApiDataset - a model defined in Swagger
 
         :param id: The id of this ApiDataset.  # noqa: E501
@@ -47,6 +47,8 @@ class ApiDataset(Model):
         :type publish_approved: bool
         :param related_assets: The related_assets of this ApiDataset.  # noqa: E501
         :type related_assets: List[str]
+        :param filter_categories: The filter_categories of this ApiDataset.  # noqa: E501
+        :type filter_categories: Dict[str, str]
         :param domain: The domain of this ApiDataset.  # noqa: E501
         :type domain: str
         :param format: The format of this ApiDataset.  # noqa: E501
@@ -68,6 +70,7 @@ class ApiDataset(Model):
             'featured': bool,
             'publish_approved': bool,
             'related_assets': List[str],
+            'filter_categories': Dict[str, str],
             'domain': str,
             'format': str,
             'size': str,
@@ -84,6 +87,7 @@ class ApiDataset(Model):
             'featured': 'featured',
             'publish_approved': 'publish_approved',
             'related_assets': 'related_assets',
+            'filter_categories': 'filter_categories',
             'domain': 'domain',
             'format': 'format',
             'size': 'size',
@@ -99,6 +103,7 @@ class ApiDataset(Model):
         self._featured = featured
         self._publish_approved = publish_approved
         self._related_assets = related_assets
+        self._filter_categories = filter_categories
         self._domain = domain
         self._format = format
         self._size = size
@@ -267,6 +272,27 @@ class ApiDataset(Model):
         """
 
         self._related_assets = related_assets
+
+    @property
+    def filter_categories(self) -> Dict[str, str]:
+        """Gets the filter_categories of this ApiDataset.
+
+
+        :return: The filter_categories of this ApiDataset.
+        :rtype: Dict[str, str]
+        """
+        return self._filter_categories
+
+    @filter_categories.setter
+    def filter_categories(self, filter_categories: Dict[str, str]):
+        """Sets the filter_categories of this ApiDataset.
+
+
+        :param filter_categories: The filter_categories of this ApiDataset.
+        :type filter_categories: Dict[str, str]
+        """
+
+        self._filter_categories = filter_categories
 
     @property
     def domain(self) -> str:
