# api/server/swagger_server/models/api_notebook.py
@@ -18,19 +18,19 @@ from datetime import date, datetime  # noqa: F401
 
 from typing import List, Dict  # noqa: F401
 
-from swagger_server.models.base_model_ import Model
+from swagger_server.models.api_asset import ApiAsset
 from swagger_server.models.api_metadata import ApiMetadata  # noqa: F401,E501
 from swagger_server.models.api_parameter import ApiParameter  # noqa: F401,E501
 from swagger_server import util
 
 
-class ApiNotebook(Model):
+class ApiNotebook(ApiAsset):
     """NOTE: This class is auto generated by the swagger code generator program.
 
     Do not edit the class manually.
     """
 
-    def __init__(self, id: str=None, created_at: datetime=None, name: str=None, description: str=None, featured: bool=None, publish_approved: bool=None, related_assets: List[str]=None, url: str=None, metadata: ApiMetadata=None, parameters: List[ApiParameter]=None):  # noqa: E501
+    def __init__(self, id: str=None, created_at: datetime=None, name: str=None, description: str=None, featured: bool=None, publish_approved: bool=None, related_assets: List[str]=None, filter_categories: Dict[str, str]=None, url: str=None, metadata: ApiMetadata=None, parameters: List[ApiParameter]=None):  # noqa: E501
         """ApiNotebook - a model defined in Swagger
 
         :param id: The id of this ApiNotebook.  # noqa: E501
@@ -47,6 +47,8 @@ class ApiNotebook(Model):
         :type publish_approved: bool
         :param related_assets: The related_assets of this ApiNotebook.  # noqa: E501
         :type related_assets: List[str]
+        :param filter_categories: The filter_categories of this ApiNotebook.  # noqa: E501
+        :type filter_categories: Dict[str, str]
         :param url: The url of this ApiNotebook.  # noqa: E501
         :type url: str
         :param metadata: The metadata of this ApiNotebook.  # noqa: E501
@@ -62,6 +64,7 @@ class ApiNotebook(Model):
             'featured': bool,
             'publish_approved': bool,
             'related_assets': List[str],
+            'filter_categories': Dict[str, str],
             'url': str,
             'metadata': ApiMetadata,
             'parameters': List[ApiParameter]
@@ -75,6 +78,7 @@ class ApiNotebook(Model):
             'featured': 'featured',
             'publish_approved': 'publish_approved',
             'related_assets': 'related_assets',
+            'filter_categories': 'filter_categories',
             'url': 'url',
             'metadata': 'metadata',
             'parameters': 'parameters'
@@ -87,6 +91,7 @@ class ApiNotebook(Model):
         self._featured = featured
         self._publish_approved = publish_approved
         self._related_assets = related_assets
+        self._filter_categories = filter_categories
         self._url = url
         self._metadata = metadata
         self._parameters = parameters
@@ -252,6 +257,27 @@ class ApiNotebook(Model):
         """
 
         self._related_assets = related_assets
+
+    @property
+    def filter_categories(self) -> Dict[str, str]:
+        """Gets the filter_categories of this ApiNotebook.
+
+
+        :return: The filter_categories of this ApiNotebook.
+        :rtype: Dict[str, str]
+        """
+        return self._filter_categories
+
+    @filter_categories.setter
+    def filter_categories(self, filter_categories: Dict[str, str]):
+        """Sets the filter_categories of this ApiNotebook.
+
+
+        :param filter_categories: The filter_categories of this ApiNotebook.
+        :type filter_categories: Dict[str, str]
+        """
+
+        self._filter_categories = filter_categories
 
     @property
     def url(self) -> str:
